# rust_winrm_client

./: .gitignore  Cargo.toml  README.md
src/: client.rs.broken  main.rs
